# geospatial-terrain-importer

./: .clang-format  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cmake/: CompilerFlags.cmake  FindGDAL.cmake  Info.plist.in
docs/: index.html  main.js  sample_dem.tif  style.css
docs/terrain/everest/: lod0.f32  lod1.f32  lod2.f32  meta.json
docs/terrain/fuji/: lod0.f32  lod1.f32  lod2.f32  meta.json
docs/terrain/grandcanyon/: lod0.f32  lod1.f32  lod2.f32  meta.json
docs/terrain/sf/: lod0.f32  lod1.f32  lod2.f32  meta.json
scripts/: batch_processor.py  lod_generator.py  make_sample_dem.py  requirements-dev.txt  requirements.txt  terrain_utils.py  texture_atlas.py
src/: main.cpp
src/core/: CoordConverter.cpp  CoordConverter.hpp  GeoTiffReader.cpp  GeoTiffReader.hpp  LodManager.cpp  LodManager.hpp  MeshSimplifier.cpp  MeshSimplifier.hpp  SatelliteImageLoader.cpp  SatelliteImageLoader.hpp  TerrainMesh.cpp  TerrainMesh.hpp  TextureAtlas.cpp  TextureAtlas.hpp
src/gui/: FileBrowserPanel.cpp  FileBrowserPanel.hpp  ImportControlsWidget.cpp  ImportControlsWidget.hpp  MainWindow.cpp  MainWindow.hpp  ProgressDialog.cpp  ProgressDialog.hpp  SettingsPanel.cpp  SettingsPanel.hpp
src/renderer/: Camera.cpp  Camera.hpp  GpuMesh.cpp  GpuMesh.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TerrainRenderer.cpp  TerrainRenderer.hpp
src/shaders/: shaders.qrc  terrain.frag  terrain.vert
src/styles/: style.qrc  style.qss
tests/cpp/: CMakeLists.txt  main.cpp  test_camera.cpp  test_coord_converter.cpp  test_framework.hpp  test_geotiff_reader.cpp  test_helpers.hpp  test_lod_manager.cpp  test_mesh_simplifier.cpp  test_terrain_mesh.cpp  test_texture_atlas.cpp
tests/python/: conftest.py  test_batch_processor.py  test_lod_generator.py  test_terrain_utils.py  test_texture_atlas.py
